hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tthis.php.exp
File "tthis.php", line 8, characters 12-16:
Invalid return type (Typing[4110])
File "tthis.php", line 6, characters 13-13:
Expected C
File "tthis.php", line 4, characters 17-23:
But got dynamic
